--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body{
     width: 100%;
     height: 100%;
     /* cursor: none; */
+    overflow-x: hidden;
 }
 .main{
-    width: 100%;
     cursor: none;
 }
 .main:hover{
@@ -320,12 +320,12 @@ body{
     align-items: center;
     justify-content: flex-start;
     position: relative;
+    transition: all linear .5s;
 }
 .elem h1{
     font-size: 6vh;
     mix-blend-mode: difference;
-
-
+    transition: all linear .5s;
 }
 .elem img{
     height: 150px;
@@ -335,6 +335,7 @@ body{
     border-radius: 50%;
     position: absolute;
     opacity: 0;
+    transition: all linear .5s;
 }
 .elem1{
     /* background-image:url(images/pexels-francesco-ungaro-2325503.jpg); */
@@ -413,117 +414,67 @@ li:hover{
     font-size: 22px;
 }
 @media (max-width:600px) {
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    html,
-    body{
-        width: 100%;
-        height: 100%;
-        /* cursor: none; */
-    }
+
+  
     .main{
-        width: 100%;
-        /* cursor: none; */
+        cursor: pointer;
     }
-    /* .main:hover{ */
-        /* cursor: none; */
-    /* } */
+   
     .cursor{
-        width: 10vw;
-        height:10vw;
-        border-radius: 50%;
-        /* text-align: center; */
-        display: flex;
-        font-size: 2vw;
-        align-items: center;
-        z-index: 9999;
-        justify-content: center;
-        position: absolute;
-        mix-blend-mode: difference;
-        background-color: yellow;
-    }
-    .frontpage{
-        width: 100%;
-        height: 100vh;
-        /* background-color: red; */
-        background-image: url(./images/bg1.webp);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        color: #ffff;
-        /* margin: 0px 10px; */
+    
+        display: none;
     }
     .frontpage nav{
-        display: flex;
-        width: 100%;
-        align-items: center;
-        /* justify-content: space-between; */
-        height: 11vh;
-        gap: 2vw;
-        /* background-color: yellow; */
-        /* margin:111px 0px ; */
-        padding: 0px 30px;
-        text-align: center;
+        flex-direction: column;
+        gap: 10vw;
+        padding: 1px 1vw;
     }
     .frontpage nav .centernav{
         display: flex;
         align-items: center;
-        gap: 2vw;
-        font-weight: 100;
+        gap: 4vw;
+        padding:2vw;
     }
     .frontpage nav button{
         font-size: 4vw;
         color: black;
         background-color: #FFF;
-        padding: 0.2vw 3vw;
+        padding: 4px 17px;
         border-radius: 20px;
-        border: none;
-        margin-bottom: 3px;
+        border: .2vw solid black;
+        margin-left: 5vw;
+        margin-bottom: 3vw;
     }
     .frontpage h1{
         font-size: 12vw;
-        text-align: center;
-        padding: 10vw 0vw;
+        padding-top: 30vw ;
+        padding-bottom: 9vw;
     }
     .frontpage .centerfront{
-        display: flex;
+        flex-direction: column;
         align-items: center; 
         /* padding: 0vh 50vh; */
-        gap: 4vw;
+        gap: 3vw;
         justify-content: center;
-        padding: 1vw 0vw 5vw 0vw;
     }
-    .frontpage .centerfront button{
-        background-color: rgb(162, 162, 23);
-        font-size: 4vw;
-        padding: 1.6vw 2.3vw;
-        border-radius:3vw;
-        border: none;
-        margin-bottom: 1vw;
-    }
-    .frontpage .centerfront button span{
-        background-color: white;
-        text-align: center;
-        padding: .3vw;
-        border-radius: 3vw;
-    }
+
+   
     .frontpage .centerfront p{
-        font-size: 3vw;
+        font-size: 5vw;
         font-weight: 700;
-        padding: 7vw;
+        text-align: center;
+        padding-top: 10vw;
+        line-height: 2;
     }
     .frontpage .h2{
         width: 100%;
+        padding-top:35vw ;
         height: 14vw;
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 3vh;
+        gap: 5vh;
         flex-direction: column;
-        padding: 5vw;
     }
     .frontpage .h2 button{
         background-color: #fff;
@@ -539,26 +490,35 @@ li:hover{
     .secondpage{
         display: flex;
         align-items: center;
-        gap: 5vw;
-        padding: 3vw 3vw;
         flex-direction: column;
+        justify-content: start;
+        padding: 3vw 3vw;
+        gap: 20vw;
         position: relative;
-       width: 100%;
-       height: fit-content;
+        height: 280vw;
+    
     }
     .child1{
         display: flex;
-        justify-content: center;
+        align-items: center;
+        gap: 20vw;
+        text-align: center;
         flex-direction: column;
-        gap: 30vw;
+    }
+    .child2{
+        display: flex;
+        align-items: center;
+        gap: 19vw;
+        flex-direction: column;
+        padding: 1vw 2vw;
     }
     .child1 .bhojan{
-        width: 50vw;
-        height: 25vw;
+        width: 90vw;
+        height: 35vh;
         /* background-color: yellow; */
         padding: 1vw;
         background-color:transparent;
-        /* margin-left: auto; */
+        margin-left: auto;
         
     }
     .child1 .bhojan h1{
@@ -568,83 +528,95 @@ li:hover{
     .child1 .bhojan img{
         width: 100%;
         object-fit: cover;
-        height: 30vw;
+        height: 26vh;
         border-radius: 10px;
     }
     .child2 .balloon{
-        width: 50vw;
+        width: 65vw;
         height: 30vw;
         /* background-color: yellow; */
         margin-left: auto;
+        text-align: center;
     }
     .child2 .balloon img{
         width: 100%;
         object-fit: cover;
-        height: 100%;
-        border-radius: 1w;
+        height: 28vw;
+        border-radius: 10px;
         /* margin: 2vw; */
         margin-right:auto ;
     }
     .child2 .box1{
-        width: 50vw;
+        width: 80vw;
         height: 36vw;
         /* background-color: yellow; */
         margin-left: auto;
-        /* padding-bottom: 10vw; */
+        text-align: center;
     }
     .child1 .box2{
-        width: 40vw;
+        width: 80vw;
         height: 36vw;
     
     }
     .child2 .box1 img{
         width: 100%;
         object-fit: cover;
-        height: 30vw;
+        height: 40vw;
         border-radius: 2vw;
-        padding: 1vw;
-
     }
     .child1 .box2 img{
-        border-radius: 1.4vw;
+        border-radius: 20px;
         width: 100%;
-        height: 30vw;
+        height: 35vw;
         object-fit: cover;
     }
     .adventure{
         text-align: center;
     }
     .adventure h3{
-        color: rgb(101, 85, 85);
-        line-height: .8vw;
-        font-size: 1.8vw;
-        margin: 0.8vh;
+        
+        font-size: 4vw;
     }
     .condition{
-        width: 95%;
-        height: fit-content;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        width: 100%;
+        height: 130vh;
         flex-direction: column;
+        align-items: center;
         background-color: rgb(143, 112, 171);
         margin: 3vw;
+        color: #ffff;
         padding: 3vw;
+        padding: 10vw;
+
     }
     
     .perasoot1 img{
-        width: 24vw;
+        width: 69vw;
         height: 22vw;
         object-fit: contain;
         padding-left: 3vw;
-        object-position: 10% 60%;
+        object-position: 55% 60%;
     }
     .perasoot1 h1{
-        padding: 1vw 0vw;
+        padding: 3vw 0vw;
     }
     .perasoot1 p{
-        font-size: 1.3vw;
-        font-weight: 100;
+        font-size: 2.4vw;
+        font-weight: 900;
+        letter-spacing: 0.2vw;
+        line-height: 1;
+    }
+    #bag{
+        object-position: 47% 60%;
+        width: 150vw;
+        height: 40vw;
+
+
+    }
+    #alow{
+        object-position: 47% 60%;
+        width: 150vw;
+        height: 40vw; 
     }
     #weight{
         scale: 2.3;
@@ -652,130 +624,83 @@ li:hover{
     }
     .pakages{
         margin: 0vw 3vw;
-        height: fit-content;
-        
+        height: 125vh;
        
     }
     .plan{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 2vw 0vw;
+        flex-direction: column;
+        text-align: center;
+        padding: 4vw;
+        gap: 5vw;
     }
     .discount{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    
+          flex-direction: column;    
+          align-items: center;
+          gap: 11vw;
     }
-    
     .pakages1{
-        width: 29vw;
-        height: 40vh;
-        background-color: rgb(236, 194, 144);
+        width: 55vw;
+        height: 30vh;
         padding: 1.3vw;
         border-radius: 2vw;
     }
     .pakages1 h4{
-        font-size: 2vw;
-        padding: 1.4vw 1.5vw;
+        font-size: 6vw;
+        padding: 2.5vw 4vw;
     }
     .pakages1 h1{
-        padding: 0vw 1.5vw;
-        font-size: 2.4vw;
+        padding: 0vw 4vw;
+        font-size: 5vw;
         font-weight: 500;
     
     }
     .pakages1 h1 span{
-        font-size: 3vw;
+        font-size: 6vw;
         font-weight: 900;
     }
     .pakages1 ul{
-        padding: 2vw 1.5vw;
+        padding: 2vw 4vw;
         line-height: 1.3;
         font-weight: 500;
-        font-size: 1.8vw;
-        letter-spacing: 1px;
+        font-size: 3vw;
+        letter-spacing: .1vw;
         margin: 0vw 2vw;
+        line-height: 1.5;
     
     }
     .pakages1 button{
         padding: 1.4vw 2.9vw;
-        font-size: 1.3vw;
+        font-size: 5vw;
         border-radius: 2vw;
         font-weight: 500;
         background-color:transparent ;
-        margin: 0vw 2vw;
+        margin: 4vw 4vw;
     }
     .pakages1 button span{
-        background-color:#ffff;
-        padding:1px 3px;
-        border-radius: 10px;
-    }
-    #black{
-        background-color: black;
-        color: #fff;
-        margin-bottom: 9vw;
-    }
-    #black button{
-          color: #fff;
-          border:2px solid #ffff;
-    }
-    #black button span{
-        color: black;
+        padding:0.vw 1vw;
+        border-radius: 2vw;
     }
     .part2{
         width: 100%;
-        height: 100%;
-        background-color: black;
+        height:64vh;
         color: #ffff;
     }
         
     .elem{
         width: 100%;
-        height: 18vw;
-        border-bottom: 2px solid #ffff;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        position: relative;
+        height: 16vh;
     }
     .elem h1{
-        font-size: 6vh;
-        mix-blend-mode: difference;
-    
-    
+        font-size: 4vh;
     }
     .elem img{
-        height: 150px;
-        width: 150px;
-        object-fit: cover;
-        object-position: top;
-        border-radius: 50%;
-        position: absolute;
-        opacity: 0;
+        height: 30vw;
+        width: 30vw;
     }
-    .elem1{
-        background-size: cover;
-        background-position: center;
-    
-    }
+ 
     .elem2{
+        /* background-image:url(images/pexels-taryn-elliott-3889742.jpg); */
         background-size: cover;
-        background-position: center;
-    
-    }
-    .elem3{
-        background-size: cover;
-        background-position: center;
-        
-    
-    }
-    
-    .elem4{
-        
-        background-size: cover;
-        
         background-position: center;
     
     }
@@ -792,43 +717,52 @@ li:hover{
     
     .footer{
         width: 100%;
-        height: 50vh;
-        padding: 3vw 3vw;
-        background-color: rgb(121, 72, 201);
-        color: #fff;
+        height: 150vh;
     }
     .footer .heading{
         width: 100%;
-        display: flex;
-        flex-wrap: nowrap;
-        align-items: start;
-        /* justify-content: space-between; */
-        gap: 9vw;
-        
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .box4 h3{
+       padding: 4vw;
+    }
+    .box4 {
+        margin-bottom: 3vw;
+        width: 60%;
+    }
+    .box4 h2{
+        color: rgb(151, 94, 8);
+        padding: 3vw;
+        background-color: rgb(198, 218, 160);
+        box-shadow: 1vw 1vw 5vw black;
+    }
+    .box4 li{
+        text-align: start;
+        margin-left: 4vw;
+
     }
     .nav2{
-        display: flex;
-        width: 100%;
-        align-items: center;
-        
-        justify-content: space-between;
-        border-top: 2px solid rgb(10, 4, 15);
-        height: 13vh;
-        /* background-color: yellow; */
-        /* margin:111px 0px ; */
-        padding: 0px 30px;
-        margin-top: 2vw;
-        text-align: center;
+        flex-direction: column;
+        gap: 6vw;
+    }
+    .nav2 h2{
+        padding: 3vw;
+        font-size: 10vw;
+        -webkit-text-stroke: black 0.2vw;
+    }
+    .nav2 h3{
+        padding: 5vw;
+        font-size: 6vw;
     }
     .nav2 h3 span{
         color: rgb(188, 112, 58);
     }
     .nav2 i{
-        background-color: rgb(229, 229, 13);
-        color: black;
         border-radius: 1vw;
         padding: 0.5vw;
-        margin: .2vw;
-        font-size: 4vw
-        }
+        margin: 2vw;
+        font-size: 6vw; 
+    }
 }
