--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body{
     width: 100%;
     height: 100%;
     /* cursor: none; */
-    overflow-x: hidden;
+    overflow: hidden;
+    text-transform: capitalize;
 }
 .main{
     cursor: none;
@@ -414,7 +415,10 @@ li:hover{
     font-size: 22px;
 }
 @media (max-width:600px) {
-
+    body{
+        overflow-x: hidden;
+        overflow-y: initial;
+    }
   
     .main{
         cursor: pointer;
